--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h1 {
 }
 
 h1 span {
-	background: #baff00;
+	background: #f5b413;
 	padding: 0 10px;
 	color: #222222;
 	display: inline-block;
@@ -91,7 +91,7 @@ ol {
 }
 
 .sp-title span {
-	background: #baff00;
+	background: #f5b413;
 	padding: 0 10px;
 	color: #222222;
 	display: inline-block;
@@ -124,7 +124,7 @@ ol {
 .section-title h1,
 .section-title h2 {
 	display: inline-block;
-	background: #baff00;
+	background: #f5b413;
 	padding: 0 20px;
 	margin-bottom: 0;
 	font-size: 60px;
@@ -224,8 +224,8 @@ ol {
 }
 
 .site-btn.sb-solid-color {
-	background: #baff00;
-	border-color: #baff00;
+	background: #f5b413;
+	border-color: #f5b413;
 }
 
 .site-btn.sb-solid-color:after,
@@ -236,12 +236,12 @@ ol {
 .site-btn.sb-solid-dark {
 	background: #222;
 	border-color: #222;
-	color: #baff00;
+	color: #f5b413;
 }
 
 .site-btn.sb-solid-dark:after,
 .site-btn.sb-solid-dark:before {
-	background: #baff00;
+	background: #f5b413;
 }
 
 .element {
@@ -266,7 +266,7 @@ ol {
 }
 
 .accordion-area .panel-header.active {
-	background: #baff00;
+	background: #f5b413;
 }
 
 .accordion-area .panel-header.active .panel-link:after {
@@ -283,7 +283,7 @@ ol {
 	top: 0;
 	height: 100%;
 	width: 50px;
-	background: #baff00;
+	background: #f5b413;
 	border: none;
 	cursor: pointer;
 }
@@ -328,7 +328,7 @@ ol {
 }
 
 .tab-element .nav-tabs .nav-link.active {
-	background: #baff00;
+	background: #f5b413;
 }
 
 .tab-element .nav-tabs .nav-link.active,
@@ -417,7 +417,7 @@ ol {
 	float: right;
 	display: inline-block;
 	padding: 5px 10px;
-	background: #baff00;
+	background: #f5b413;
 	font-weight: 700;
 	letter-spacing: 1px;
 	margin-top: 30px;
@@ -460,7 +460,7 @@ ol {
 	left: 50%;
 	margin-left: 1px;
 	top: 0;
-	background: #baff00;
+	background: #f5b413;
 	-webkit-transition: all 0.4s;
 	-o-transition: all 0.4s;
 	transition: all 0.4s;
@@ -510,7 +510,7 @@ ol {
 }
 
 .social-links a:hover {
-	color: #baff00;
+	color: #f5b413;
 }
 
 .hero-right-text {
@@ -563,7 +563,7 @@ ol {
 
 .hero-slider .owl-nav .owl-prev:hover,
 .hero-slider .owl-nav .owl-next:hover {
-	color: #baff00;
+	color: #f5b413;
 }
 
 .hero-slider .owl-nav .owl-prev i {
@@ -595,7 +595,7 @@ ol {
 
 .slide-num-holder span {
 	font-size: 48px;
-	color: #baff00;
+	color: #f5b413;
 	position: relative;
 	top: -10px;
 	right: -10px;
@@ -619,9 +619,9 @@ ol {
 	content: "";
 	height: calc(100% + 50px);
 	width: 330px;
-	border-top: 150px solid #baff00;
-	border-left: 150px solid #baff00;
-	border-bottom: 90px solid #baff00;
+	border-top: 150px solid #f5b413;
+	border-left: 150px solid #f5b413;
+	border-bottom: 90px solid #f5b413;
 	top: 0;
 	left: 0;
 	opacity: 0.73;
@@ -707,7 +707,7 @@ ol {
 }
 
 .service-box:hover .sb-icon {
-	background-color: #baff00;
+	background-color: #f5b413;
 }
 
 .service-box:hover .sb-icon .sb-img-icon {
@@ -720,7 +720,7 @@ ol {
 }
 
 .service-box:hover .readmore {
-	background-color: #baff00;
+	background-color: #f5b413;
 	padding: 2px 10px;
 }
 
@@ -831,7 +831,7 @@ ol {
 }
 
 .milestone:hover:after {
-	background: #baff00;
+	background: #f5b413;
 }
 
 /*----------------------------------------*/
@@ -857,7 +857,7 @@ ol {
 }
 
 .projects-filter-nav li.btn-active {
-	background: #baff00;
+	background: #f5b413;
 	color: #222222;
 }
 
@@ -900,7 +900,7 @@ ol {
 }
 
 .projects-slider .single-project .project-content p {
-	color: #baff00;
+	color: #f5b413;
 	font-weight: 500;
 	position: relative;
 	top: 40px;
@@ -913,7 +913,7 @@ ol {
 	position: absolute;
 	right: 50px;
 	bottom: 30px;
-	background: #baff00;
+	background: #f5b413;
 	font-size: 14px;
 	font-weight: 700;
 	color: #222;
@@ -966,7 +966,7 @@ ol {
 
 .projects-slider .owl-nav .owl-prev:hover,
 .projects-slider .owl-nav .owl-next:hover {
-	background: #baff00;
+	background: #f5b413;
 }
 
 .projects-slider .owl-nav .owl-prev i {
@@ -1055,7 +1055,7 @@ ol {
 }
 
 .footer-item ul li a:hover {
-	background: #baff00;
+	background: #f5b413;
 }
 
 /*----------------------------------------*/
@@ -1073,7 +1073,7 @@ ol {
 
 .page-header-section .header-title span {
 	background: none;
-	color: #baff00;
+	color: #f5b413;
 }
 
 /*----------------------------------------*/
@@ -1116,7 +1116,7 @@ ol {
 }
 
 .testimonials-section .qut {
-	color: #baff00;
+	color: #f5b413;
 	font-size: 36px;
 	margin-bottom: 20px;
 }
@@ -1130,7 +1130,7 @@ ol {
 .ts-item h4 {
 	font-size: 15px;
 	font-weight: 400;
-	color: #baff00;
+	color: #f5b413;
 	margin-bottom: 0;
 }
 
@@ -1177,7 +1177,7 @@ ol {
 }
 
 .team-member:hover .member-info {
-	background: #baff00;
+	background: #f5b413;
 	-webkit-box-shadow: 0px 0px 0px rgba(114, 114, 114, 0.21);
 	        box-shadow: 0px 0px 0px rgba(114, 114, 114, 0.21);
 }
@@ -1238,7 +1238,7 @@ ol {
 }
 
 .service-slider .owl-dots .owl-dot.active {
-	background: #baff00;
+	background: #f5b413;
 }
 
 .service-text h2 {
@@ -1303,7 +1303,7 @@ ol {
 }
 
 .solid-service-box:hover {
-	background: #baff00;
+	background: #f5b413;
 }
 
 .solid-service-box:hover h2 {
@@ -1358,7 +1358,7 @@ ol {
 	font-weight: 700;
 	color: #222;
 	display: inline-block;
-	background: #baff00;
+	background: #f5b413;
 	padding: 4px 15px;
 	margin-bottom: 20px;
 }
@@ -1391,7 +1391,7 @@ ol {
 }
 
 .blog-post:hover .thumb:after {
-	background: #baff00;
+	background: #f5b413;
 }
 
 .pagination {
@@ -1409,7 +1409,7 @@ ol {
 
 .pagination a.active {
 	font-size: 48px;
-	color: #baff00;
+	color: #f5b413;
 }
 
 .search {
@@ -1476,7 +1476,7 @@ ol {
 }
 
 .widget-area ul li a:hover {
-	background: #baff00;
+	background: #f5b413;
 	color: #222;
 }
 
@@ -1552,7 +1552,7 @@ ol {
 	height: 100%;
 	left: 0;
 	top: 0;
-	background: #baff00;
+	background: #f5b413;
 	opacity: 0;
 	-webkit-transition: all 0.3s;
 	-o-transition: all 0.3s;
@@ -1791,9 +1791,9 @@ ol {
 		line-height: 60px;
 	}
 	.slide-content:after {
-		border-top: 100px solid #baff00;
-		border-left: 100px solid #baff00;
-		border-bottom: 60px solid #baff00;
+		border-top: 100px solid #f5b413;
+		border-left: 100px solid #f5b413;
+		border-bottom: 60px solid #f5b413;
 	}
 	.hero-slider .owl-nav {
 		left: 170px;
