--- a/css/style.css
+++ b/css/style.css
@@ -748,7 +748,7 @@ ol {
 	width: 50%;
 	height: 100%;
 	left: 0;
-	background-image: url("../img/cta-img.jpg");
+	background-image: url("../img/projects/eco-view.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
