--- a/css/style.css
+++ b/css/style.css
@@ -1105,7 +1105,7 @@ ol {
 	height: calc(100% + 120px);
 	left: 0;
 	top: -60px;
-	background-image: url("../img/cta-img.jpg");
+	background-image: url("../img/projects/logistics.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
